# Fine-Tune-Embedding-RAG

./: .env.example  .gitignore  dataset_creator.py  evalaute.py  fine_tune.py  hf_push.py  main.py  pyproject.toml
notebooks/: inspect_model_arch.py
notebooks/create_ollama/: 1 merge_lora_base.py  2 convert_to_gguf.py  3 deploy_ollama.py
src/config/: __init__.py  config.py
src/config/yamls/: dataset_creator.yaml  evaluation.yaml  fine_tuning.yaml  hf_push.yaml
src/core/: evaluation_pipeline.py  ft_pipeline.py  hf_push_pipeline.py
src/utils/: auth_utils.py  backup_utils.py  config_manager.py  data_models.py  dataset_manager.py  evaluator_factory.py  gpu_utils.py  hardware_utils.py  hub_pusher.py  logging.py  loss_factory.py  model_card.py  model_comparator.py  model_evaluator.py  model_loader.py  training_args_builder.py  validators.py  verifiers.py
