[tool.poetry]
name = "ft-embed-unsloth"
version = "0.1.0"
description = "Fine-tuning embedding models with Unsloth"
authors = ["Elnur Garashov <garashovelnur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = {version = "2.9.0", source = "pytorch-gpu"}
torchvision = {version = "0.24.0", source = "pytorch-gpu"}
torchaudio = {version = "2.9.0", source = "pytorch-gpu"}
unsloth = ">=2025.11.6"
sentence-transformers = "^5.1.2"
tensorboard = "^2.20.0"
datasets = "^4.3.0"
transformers = "^4.57.2"
accelerate = "^1.12.0"
peft = "^0.18.0"
bitsandbytes = "^0.48.2"
envyaml = "^1.10.211231"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here if needed

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"